[package]

name = "core-nightly"
version = "2015.1.5"
authors = ["The Rust Project Developers"]

license = "MIT/Apache-2.0"
repository = "https://github.com/rust-lang/rust"
homepage = "https://github.com/rust-lang/rust"
description = """
Nightly build of libcore from the rust repo.
"""

[lib]
name = "core"
